Fixed layout issues

--- a/assets/sass/components/_inner-page.scss
+++ b/assets/sass/components/_inner-page.scss
@@ -19,13 +19,35 @@
     }
 
     .btn-soda {
-        border: 0.1rem solid #FFC371;
+        border: 0.1rem solid $soda-yellow;
         background-color: transparent;
         text-align: center;
         font-weight: normal;
         font-size: 2.4rem;
         letter-spacing: 0;
-        color: #FFC371;
+        color: $soda-yellow;
+        opacity: 1;
+    }
+
+    .btn-soda-yellow {
+        border: 0.1rem solid $soda-yellow;
+        background-color: transparent;
+        text-align: center;
+        font-weight: normal;
+        font-size: 2.4rem;
+        letter-spacing: 0;
+        color: $soda-yellow;
+        opacity: 1;
+    }
+
+    .btn-soda-red {
+        border: 0.1rem solid $soda-red;
+        background-color: transparent;
+        text-align: center;
+        font-weight: normal;
+        font-size: 2.4rem;
+        letter-spacing: 0;
+        color: $soda-red;
         opacity: 1;
     }
 }
